--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-bootstrap": "^1.0.1",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5"
   }
 }
