--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "formik": "^2.1.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.8.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react-bootstrap": "^1.0.1",
-    "@types/react-router-dom": "^5.1.5"
+    "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.4"
   }
 }
