--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^7.0.3",
     "typescript": "~3.8.0",
     "yup": "^0.29.3"
   },
