--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "@types/react-dom": "^16.9.0",
     "bootstrap": "^4.5.0",
     "formik": "^2.1.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-toastify": "^7.0.3",
     "typescript": "~3.8.0",
     "yup": "^0.29.3"
